# cocoon-news-project

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
apps/accounts/: admin.py  models.py  tests.py
apps/accounts/api/v1/: serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_author_job_description.py
apps/accounts/tests/: test_models.py  test_serializer.py  test_views.py
apps/core/: base_model.py  pagination.py  utils.py
apps/dashboard/: forms.py  urls.py  views.py
apps/news/: admin.py  filters.py  models.py
apps/news/api/v1/: serializers.py  urls.py  views.py
apps/news/migrations/: 0001_initial.py
apps/news/tests/: test_models.py  test_serializers.py  test_views.py
apps/templates/home/: create-article.html  index.html  update-article.html
cocoon_news_project/: asgi.py  settings.py  urls.py  wsgi.py
docker/: entrypoint.sh
